changes between 0.3.3 and 0.4
- full support for non iso-8859-x charsets
- Followup and reply at same time now possible
- improvements for the composer:
  + switching from news article to mail and back on the fly
  + paste as quotation
  + add/remove quotation
  + box quote support
  * rot13
  + status bar
- code cleanups

changes between 0.3.2 and 0.3.3
- bugfix for networking on solaris
- bugfix for continuous reconnection on
  news servers with authentication
- sane default window sizes
- correct default for the smtp-server port
- bugfix for a problem with some smtp servers
- fixes for non-iso-8859-x users
- buxfix for the display of plain text attachments

changes between 0.1.13 and 0.3.2
- ported to KDE2, new style guide compilant XML-GUI
- multithreaded network-code
- correct MIME-handling including multipart-messages
- support for uuencoded binaries
- ability to display attachments inline
- posting of MIME multipart-messages (attachments)
- significantly improved composer:
  + all standard editor features (find, replace, select all, ...)
  + spellchecker
  + optional external editor
  + nice attachment handling
  + insert file functionality
  + quoted text can be rewarped to preserve the orignal quoting.
  + improved signature handling,
    exiting sig dashes are detected
    optional: direct entry of the signature in the configuration dialog
  + tab key works ;-)
- improved X-Header configuration, its possible to disable
  the User-Agent identification header now.
- rewritten configuration dialog
- support for multiple newsservers
- usage of the standard mbox format for folders
- cancel/supersede function
- forward articles as e-mail
- rewritten subscribe dialog
  + nicer interface with treeview
  + shows group descriptions
  + can check for new newsgroups now (NEWGROUPS)
- ability to freely adjust the displayed article headers,
  including custom names and format options.
- improved font & color configuration,