@@ -1,5 +1,5 @@
 <!DOCTYPE kpartgui>
-<kpartgui name="KNComposer" version="10">
+<kpartgui name="KNComposer" version="11">
 
 <MenuBar>
   <Menu noMerge="1" name="file"><text>&amp;File</text>
@@ -39,6 +39,7 @@
     <Action name="tools_box"/>
     <Action name="tools_unbox"/>
     <Separator/>
+    <Action name="tools_undoRewrap"/>
     <Action name="tools_rot13"/>
     <Separator/>
     <Action name="external_editor"/>
